Integtating jwt-token for method protection

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Key": "DevoltonLabsIsTheBestDeveloperForYourGalera", 
+    "Issuer": "YourIssuer",
+    "Audience": "YourAudience"
+  },
   "AllowedHosts": "*"
 }
