--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TypingTutorDb": "Data Source=DESKTOP-V6UAP1N\\SQLEXPRESS;Initial Catalog=typingTutorDb;Integrated Security=True;Connect Timeout=20;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
+    "TypingTutorDb": "Data Source=DESKTOP-V6UAP1N\\SQLEXPRESS;Initial Catalog=typingTutorDbBeta;Integrated Security=True;Connect Timeout=20;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False;"
   },
   "Logging": {
     "LogLevel": {
